--- a/index.html
+++ b/index.html
@@ -1,12 +1,4 @@
 <!DOCTYPE html>
-<html>
-
-<body>
-The content of the body element is displayed in your browser.
-</body>
-
-</html>
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -504,7 +496,7 @@ The content of the body element is displayed in your browser.
             <div id="tab-price" class="tab-content active">
                 <div class="input-group">
                     <label class="input-label">Original Price ($)</label>
-                    <input type="number" class="calc-input" id="p-orig" placeholder="e.g. 1000">
+                    <input type="number" class="calc-input" id="p-orig" placeholder="e.g. 1,000">
                 </div>
                 <div class="input-row">
                     <div class="input-group">
@@ -1914,18 +1906,8 @@ The content of the body element is displayed in your browser.
         function calculatePriceLogic(source) {
             if(source === 'reset') { updatePriceDOM(0,0,0); return; }
             let orig = parseFloat(pOrig.value) || 0, perc = parseFloat(pDisc.value) || 0, sale = parseFloat(pSale.value) || 0;
-            
-            // LOGIC CHANGED HERE: Calculate variables but DO NOT update input fields
-            if (source === 'original' || source === 'percent') { 
-                sale = orig * (1 - (perc / 100)); 
-                // Removed: pSale.value = sale.toFixed(2);
-            } 
-            else if (source === 'sale') { 
-                if (orig !== 0) { 
-                    perc = ((orig - sale) / orig) * 100; 
-                    // Removed: pDisc.value = perc.toFixed(2);
-                } 
-            }
+            if (source === 'original' || source === 'percent') { sale = orig * (1 - (perc / 100)); pSale.value = sale.toFixed(2); } 
+            else if (source === 'sale') { if (orig !== 0) { perc = ((orig - sale) / orig) * 100; pDisc.value = perc.toFixed(2); } }
             updatePriceDOM(sale, perc, sale - orig);
         }
 
